--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2 class="section-title">Video</h2>
         <p class="muted">YouTube performance embedded below.</p>
         <div class="video-wrap">
-          <iframe src="https://www.youtube.com/embed/xWvRfvxQqfg?start=18" title="YouTube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/xWvRfvxQqfg" title="YouTube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </div>
     </section>
